--- a/.tmux.conf
+++ b/.tmux.conf
@@ -18,6 +18,8 @@ bind r source ~/.tmux.conf \; display "Configuration reloaded!"
 
 #### COLOUR (Solarized dark)
 
+set -g default-terminal "screen-256color"
+
 # default statusbar colors
 set-option -g status-bg black #base02
 set-option -g status-fg yellow #yellow
