Update Tmux Configuration

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,11 +1,16 @@
-#set-option -g mouse-select-pan on
-#set-window-option -g mode-mouse on
-
 # select pane
 bind-key k select-pane -U
 bind-key j select-pane -D
 bind-key h select-pane -L
 bind-key l select-pane -R
+
+bind-key | split-window -h -c "#{pane_current_path}"
+bind-key - split-window -v -c "#{pane_current_path}"
+unbind '"'
+unbind %
+
+# paste
+bind p paste-buffer
 
 # kill pane
 bind q killp
@@ -16,36 +21,48 @@ bind ^q killw
 # reload config
 bind r source ~/.tmux.conf \; display "Configuration reloaded!"
 
+# mouse mode
+set -g mouse on
+
+set-option -g allow-rename off
+
 #### COLOUR (Solarized dark)
 
 set -g default-terminal "screen-256color"
 
-# default statusbar colors
-set-option -g status-bg black #base02
-set-option -g status-fg yellow #yellow
-set-option -g status-attr default
-
-# default window title colors
-set-window-option -g window-status-fg brightblue #base0
-set-window-option -g window-status-bg default
-#set-window-option -g window-status-attr dim
-
-# active window title colors
-set-window-option -g window-status-current-fg brightred #orange
-set-window-option -g window-status-current-bg default
-#set-window-option -g window-status-current-attr bright
-
-# pane border
-#set-option -g pane-border-fg black #base02
-#set-option -g pane-active-border-fg brightgreen #base01
-
-# message text
-set-option -g message-bg black #base02
-set-option -g message-fg brightred #orange
-
-# pane number display
-set-option -g display-panes-active-colour blue #blue
-set-option -g display-panes-colour brightred #orange
-
 # clock
 set-window-option -g clock-mode-colour green #green
+
+set -g status-justify left
+set -g status-bg default
+set -g status-fg color12
+set -g status-interval 2
+
+
+# window status
+setw -g window-status-format " #F#I:#W#F "
+setw -g window-status-current-format " #F#I:#W#F "
+setw -g window-status-format "#[fg=magenta]#[bg=black] #I #[bg=cyan]#[fg=colour8] #W "
+setw -g window-status-current-format "#[bg=brightmagenta]#[fg=colour8] #I #[fg=colour8]#[bg=colour14] #W "
+
+
+setw -g mode-keys vi
+
+
+# The statusbar 
+
+#set -g status-position bottom
+set -g status-bg colour234
+set -g status-fg colour137
+
+# set -g status-attr dim
+#set -g status-left ''
+#set -g status-right '#[fg=colour233,bg=colour241,bold] %d/%m #[fg=colour233,bg=colour245,bold] %H:%M:%S '
+#set -g status-right-length 50
+#set -g status-left-length 20
+
+setw -g window-status-current-format ' #I#[fg=colour250]:#[fg=colour255]#W#[fg=colour50]#F '
+setw -g window-status-format ' #I#[fg=colour237]:#[fg=colour250]#W#[fg=colour244]#F '
+
+# manpage highlight 
+set -g default-terminal "xterm"
