--- a/.tmux.conf
+++ b/.tmux.conf
@@ -26,18 +26,16 @@ set -g mouse on
 
 set-option -g allow-rename off
 
-#### COLOUR (Solarized dark)
+#### COLOUR
 
-set -g default-terminal "screen-256color"
+set -g default-terminal "xterm-256color"
 
 # clock
 set-window-option -g clock-mode-colour green #green
 
 set -g status-justify left
-set -g status-bg default
-set -g status-fg color12
-set -g status-interval 2
-
+set -g status-bg black
+set -g status-fg cyan
 
 # window status
 setw -g window-status-format " #F#I:#W#F "
@@ -45,6 +43,8 @@ setw -g window-status-current-format " #F#I:#W#F "
 setw -g window-status-format "#[fg=magenta]#[bg=black] #I #[bg=cyan]#[fg=colour8] #W "
 setw -g window-status-current-format "#[bg=brightmagenta]#[fg=colour8] #I #[fg=colour8]#[bg=colour14] #W "
 
+set-option -g display-panes-active-colour colour33
+set-option -g display-panes-colour colour166
 
 setw -g mode-keys vi
 
@@ -54,12 +54,6 @@ setw -g mode-keys vi
 #set -g status-position bottom
 set -g status-bg colour234
 set -g status-fg colour137
-
-# set -g status-attr dim
-#set -g status-left ''
-#set -g status-right '#[fg=colour233,bg=colour241,bold] %d/%m #[fg=colour233,bg=colour245,bold] %H:%M:%S '
-#set -g status-right-length 50
-#set -g status-left-length 20
 
 setw -g window-status-current-format ' #I#[fg=colour250]:#[fg=colour255]#W#[fg=colour50]#F '
 setw -g window-status-format ' #I#[fg=colour237]:#[fg=colour250]#W#[fg=colour244]#F '
