--- a/.tmux.conf
+++ b/.tmux.conf
@@ -9,9 +9,6 @@ bind-key - split-window -v -c "#{pane_current_path}"
 unbind '"'
 unbind %
 
-# paste
-bind p paste-buffer
-
 # kill pane
 bind q killp
 
@@ -60,3 +57,12 @@ setw -g window-status-format ' #I#[fg=colour237]:#[fg=colour250]#W#[fg=colour244
 
 # manpage highlight 
 set -g default-terminal "xterm"
+
+# paste
+bind p paste-buffer
+set-option -s set-clipboard off
+bind-key -T copy-mode-vi v send-keys -X begin-selection
+bind-key -T copy-mode-vi y send-keys -X rectangle-toggle
+unbind -T copy-mode-vi Enter
+bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel 'xclip -se c -i'
+bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel 'xclip -se c -i'
